# reachability-advisor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  Dockerfile  GOVERNANCE.md  Makefile  NOTICE  README.md  SECURITY.md  action.yml  pyproject.toml  reachability_advisor_v5_real_world_validation_pack.docx
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  fixture_pack.md  scanner_adapter.md
.github/workflows/: ci.yml  codeql.yml  developer-demo.yml  release.yml  scorecard.yml
configs/: policy.advisory-pr.json  policy.backlog-migration.json  policy.example.json  policy.strict-release.json  scoring-benchmark.json
docs/: README.md  algorithms.md  code_quality.md  community_fixtures.md  data_formats.md  evidence_model.md  ide.md  input_adapters.md  logic_verification.md  maintainer_guide.md  maturity_targets.md  pipeline.md  policy_playbooks.md  privacy.md  production_readiness.md  quickstart.md  reachability_mapping.md  real_world_validation.md  release_process.md  roadmap.md  sbom_generation.md  scope.md  scoring.md  security_evidence.md  terraform_coverage.md  threat_model.md  user_facing_messages.md
docs/owasp/: INCUBATOR_READINESS_CHECKLIST.md  PROJECT_PAGE_DRAFT.md  PROJECT_PROPOSAL.md  REVIEWER_NOTES.md
external_corpus/: complex_app_cases.json  popular_terraform_projects.json
fixtures/benchmarks/: README.md  real-app-tier-snapshots.json
fixtures/network/: provider-network-golden.json
fixtures/policies/: README.md  provider-policy-examples.json
fixtures/security-vulnerable-apps/: README.md  coverage-expectations.json
fixtures/security-vulnerable-apps/dast-reflected-xss/: README.md
fixtures/security-vulnerable-apps/dast-ssrf-probe/: README.md
fixtures/security-vulnerable-apps/evidence/: dast-reflected-xss.json  dast-ssrf-probe.json  node-express-xss.json  node-missing-authz.json  nodejs-goof-command-injection.json  python-flask-sqli.json  python-yaml-deserialization.json
fixtures/security-vulnerable-apps/python-flask-sqli/: app.py
fixtures/security-vulnerable-apps/python-yaml-deserialization/: app.py
fixtures/source-vulnerable-apps/: README.md  coverage-expectations.json
fixtures/source-vulnerable-apps/go-http-handler/: go.mod  main.go
fixtures/source-vulnerable-apps/go-jwt-verification/: go.mod  main.go
fixtures/source-vulnerable-apps/go-yaml-loader/: go.mod  (+1 more)
fixtures/terraform/: README.md  index.json
ide/vscode/: README.md  extension.js  extension.test.js  package.json
samples/: context.json  kubernetes-manifest.yaml  source-evidence.json  tfplan-lite.json  tfplan-multicloud.json  vulnerabilities.json
samples/demo/: dast-nuclei.jsonl  dast-zap.json  kubernetes.yaml  sast-semgrep.json  sbom.cdx.json  vulnerabilities.json
samples/e2e-no-cloud/: app.cdx.json  tfplan.json  vulnerabilities.json
samples/sboms/: audit-api.cdx.json  batch-worker.cdx.json  inventory-api.cdx.json  notifier.cdx.json  orders-api.cdx.json  payments-api.cdx.json  reports-api.cdx.json
samples/security-evidence/: semgrep-ce-xss.sarif  semgrep-nodejs-goof-command-injection.sarif
samples/terraform-source/: main.tf
schemas/: artifact-manifest.schema.json  baseline.schema.json  benchmark-snapshots.schema.json  complex-benchmark.schema.json  context.schema.json  evidence-graph.schema.json  findings.schema.json  fixture-pack.schema.json  fixture-run-report.schema.json  hcl-audit-report.schema.json  kubernetes-coverage.schema.json  mapping-report.schema.json  reachability-rules.schema.json  readiness.schema.json  runtime-policy.schema.json  sbom-plan.schema.json  scoring-benchmark.schema.json  security-evidence.schema.json  source-coverage.schema.json  terraform-coverage.schema.json  vulnerability-intelligence.schema.json
scripts/: run_complex_app_validation.py  run_coverage.py  run_external_grype_validation.py  run_external_hcl_audit.py  run_external_hcl_audit.sh  run_fixture_packs.sh  run_hcl_sample.sh  run_sample.sh  run_tests.py  validate_benchmark_snapshots.py  validate_release.py  validate_scoring_benchmark.py
src/reachability_advisor/: __init__.py  artifact_manifest.py  artifacts.py  attack_path_view.py  baseline.py  benchmark_snapshots.py  cli.py  cli_parser.py  cli_quality.py  compare.py  context.py  correlation.py  demo_assets.py  effective_exposure.py  effective_graph.py  evidence_graph.py  finding_types.py  fixtures.py  hcl_static.py  iac_render.py  iam_capabilities.py  input_limits.py  kubernetes.py  mapping.py  models.py  numeric.py  outputs.py  policy.py  posture.py  purl.py  readiness.py  remediation.py  risk_graph_scoring.py  sbom.py  sbom_plan.py  scenario_view.py  scoring.py  scoring_benchmark.py  security_evidence.py  security_evidence_adapters.py  (+30 more)
tests/: test_cli_outputs.py  test_compare_extra.py  test_complex_app_validation.py  test_core.py  test_coverage_preflight.py  test_cspm.py  test_edges.py  test_effective_exposure.py  test_finding_types.py  test_fixture_packs.py  test_golden_outputs.py  test_graph_scoring.py  test_hcl_static.py  test_ide_extension.py  test_input_hardening.py  test_kubernetes.py  test_maturity_coverage.py  test_no_cloud_e2e.py  test_policy_engine_fixtures.py  test_provider_network_engine.py  test_release_evidence.py  test_release_validation.py  test_scanner_adapter_variants.py  test_schema_contracts.py  test_scoring_benchmark.py  test_security_mapping.py  test_security_refactor.py  test_terraform_multicloud.py  test_v4_logic.py  test_visual.py  test_vulnerability_intel_and_benchmarks.py
(+98 files in other folders)
