[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reachability-advisor"
version = "5.0.0"
description = "Developer-first reachability-aware dependency vulnerability prioritization for CI pipelines and IDEs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Reachability Advisor Contributors"}]
keywords = [
  "application-security",
  "sbom",
  "supply-chain-security",
  "sca",
  "reachability",
  "sarif",
  "ide",
  "ci",
  "owasp-candidate"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
reachability-advisor = "reachability_advisor.cli:main"
ra = "reachability_advisor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.coverage.run]
source = ["src/reachability_advisor"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 93
