[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "reachability-advisor"
version = "1.2.0"
description = "Security finding prioritization for dependency, SAST, DAST, and CSPM results using source and deployment context."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{name = "Reachability Advisor Contributors"}]
keywords = [
  "application-security",
  "sbom",
  "supply-chain-security",
  "sca",
  "sast",
  "dast",
  "cspm",
  "cloud-security-posture",
  "vulnerability-management",
  "security-prioritization",
  "scanner-correlation",
  "reachability",
  "sarif",
  "ide",
  "ci",
  "github-actions"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
reachability-advisor = "reachability_advisor.cli:main"
ra = "reachability_advisor.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "coverage[toml]>=7",
  "mypy>=1.10",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"reachability_advisor.fixture_data" = ["terraform/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["**/__pycache__/*", "**/*.pyc"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = [
  "^src/reachability_advisor/fixture_data/",
]

[tool.coverage.run]
source = ["src/reachability_advisor"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 93
